# submodule-plugins-gameNetwork

./: .gitignore
Corona/: build.settings  main.lua  userinterface.lua
android/: CMakeLists.txt  build.sh
android/jni/: Android.mk
ios/: build.sh
ios/GameNetworkTestApp.xcodeproj/: project.pbxproj
ios/Plugin.xcodeproj/: project.pbxproj
ios/Plugin.xcodeproj/project.xcworkspace/xcuserdata/vlad.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Plugin.xcodeproj/xcuserdata/vlad.xcuserdatad/xcschemes/: xcschememanagement.plist
mac/: build.sh
mac/Plugin.xcodeproj/: project.pbxproj
shared/: CoronaGameNetworkLibrary.cpp  CoronaGameNetworkLibrary.h  CoronaProvider.gameNetwork.lua  gameNetwork.lua
win32/: gameNetwork.sln  gameNetwork.vcproj
